[gd_scene load_steps=3 format=3 uid="uid://dqmoilatks70f"]

[ext_resource type="Script" uid="uid://c6i4nf86sufug" path="res://scripts/ui/SanctumPanel.gd" id="1_b7mba"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7mba"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.266667, 0.266667, 0.266667, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SanctumPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b7mba")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b7mba")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="SanctumLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Welcome to the Sanctum!"
horizontal_alignment = 1

[node name="ResearchLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
text = "Technology: Auto-Collection
Cost: 15 Stone"
fit_content = true

[node name="ResearchButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Start Research"

[node name="VelariteResearchLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Technology: Interdimensional Travel
Cost: 10 Velarite"

[node name="VelariteResearchButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Start Research"
